fix: Quitar overflow al html

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,10 @@
 
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: 'Inter', sans-serif;
   background-color: var(--primary-bg);
